# Mobile-Money-Online-Auction-System

./: .env.example  .gitignore  .replit  Dockerfile  FRAUD_DETECTION_FIXES_COMPLETE.md  FRAUD_DETECTION_MANUAL_TEST.md  IMPROVEMENTS.md  OPERATIONS.md  PROPOSAL_COMPLIANCE.md  README.md  RESULTS.md  TESTING_FRAUD_DETECTION.md  THREAT_MODEL.md  docker-compose.yml  fraud_detection_dataset.json  fraud_eval.py  nginx.conf  pyproject.toml  replit.md  requirements.txt
.github/workflows/: ci.yml
auction_system/: asgi.py  hashers.py  routing.py  settings.py  urls.py
auctions/: admin.py  consumers.py  forms.py  fraud_detection.py  models.py  rapid_bidding.py  test_bidding.py  test_transaction_log.py  test_websocket.py  views.py
auctions/migrations/: 0001_initial.py  0002_item_min_increment_alter_item_category.py  0003_review_review_image.py  0004_country.py  0005_message.py  0006_alter_item_status.py  0007_item_created_via_item_requires_media_followup.py  0008_item_free_shipping_item_pickup_available_and_more.py  0009_alter_shippinglocation_options_and_more.py  0010_bidcooldown.py
auctions/templatetags/: cart_tags.py  custom_filters.py  message_tags.py
payments/: admin.py  cron.py  models.py  services.py  sms_service.py  test_payments.py  test_ussd.py  test_webhooks.py  urls.py  urls_webhooks.py  ussd_views.py  views.py  webhooks.py
payments/migrations/: 0001_initial.py  0003_payment_platform_tax.py  (+2 more)
templates/: base.html  home.html
users/: admin.py  forms.py  middleware.py  models.py  rate_limiting.py  tests_security.py  urls.py  views.py
(+49 files in other folders)
